--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.xianhai.newsflash.SwipeActivity">
 
+
     <ImageView
         android:id="@+id/backgroundView"
         android:layout_width="match_parent"
@@ -118,6 +119,11 @@
             android:text="Like" />
 
     </LinearLayout>
+
+    <WebView
+        android:id="@+id/WebView1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"></WebView>
 
     <ProgressBar
         android:id="@+id/progressBar"
