--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -119,7 +119,7 @@
                     android:id="@+id/keytermsTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="Related Terms:" />
 
                 <Spinner
                     android:id="@+id/keytermsSpinner"
